# ncbi-genome-download

./: .coveragerc  .drone.yml  .gitignore  .mailmap  CITATION.cff  CITATION.rff  MANIFEST.in  Makefile  README-CN.md  README.md  ncbi-genome-download-runner.py  publish.sh  requirements.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish.yml  test.yml
contrib/: gimme_taxa.py
ncbi_genome_download/: __init__.py  __main__.py  argument_parser.py  config.py  core.py  jobs.py  metadata.py  summary.py
ncbi_genome_download/tests/: partial_summary.txt  test_core.py  test_summary.py
tests/: assembly_status.txt  new_format_summary.txt  noascii_summary.txt  requirements.txt  test_arguments.py  test_config.py  test_core.py  test_jobs.py  test_metadata.py  test_summary.py  truncated_summary_new.txt  type_material.txt  viral_summary.txt  weird_organism_name_summary.txt
