[metadata]
# This will completely override (not add to, but replace) the install_requires
# when building a wheel. Unfortunately this requires duplicating all of the
# depenencies here, but this allows us to support back to an older version of
# pip/setuptools inside the setup.py while still using the newer environment
# marker technique inside of a wheel.
requires-dist =
    # We require this gross hack of listing out every 2.7 version < 2.7.9 because
    # older versions of setuptools/pip used string comparisons and thus 2.7.12 < 2.7.9.
    pyOpenSSL; python_version < '2.7.9' or python_full_version in '2.7.0 2.7.1 2.7.2 2.7.3 2.7.4 2.7.5 2.7.6 2.7.7 2.7.8'
    requests >= 2.4.3
