[metadata]
# This will completely override (not add to, but replace) the install_requires
# when building a wheel. Unfortunately this requires duplicating all of the
# depenencies here, but this allows us to support back to an older version of
# pip/setuptools inside the setup.py while still using the newer environment
# marker technique inside of a wheel.
requires-dist =
    # We require this gross hack of listing out every 2.7 version < 2.7.9 because
    # older versions of setuptools/pip used string comparisons and thus 2.7.12 < 2.7.9.
    pyOpenSSL; python_version < '2.7.9' or python_full_version in '2.7.0 2.7.1 2.7.2 2.7.3 2.7.4 2.7.5 2.7.6 2.7.7 2.7.8'
    enum34; python_version < '3.4.0' or python_full_version in '2.7.0 2.7.1 2.7.2 2.7.3 2.7.4 2.7.5 2.7.6 2.7.7 2.7.8 2.7.9 2.7.10 2.7.11 2.7.12 2.7.13 3.0.0 3.0.1 3.1.0 3.1.1 3.1.2 3.1.3 3.1.4 3.1.5 3.2.0 3.2.1 3.2.2 3.2.3 3.2.4 3.2.5 3.2.6 3.3.0 3.3.1 3.3.2 3.3.3 3.3.4 3.3.5 3.3.6'
    appdirs
    requests >= 2.4.3

[bdist_wheel]
universal=1

[pycodestyle]
max-line-length = 120
exclude = **/.ropeproject/*
