[metadata]
# This will completely override (not add to, but replace) the install_requires
# when building a wheel. Unfortunately this requires duplicating all of the
# depenencies here, but this allows us to support back to an older version of
# pip/setuptools inside the setup.py while still using the newer environment
# marker technique inside of a wheel.
requires-dist =
    appdirs
    requests >= 2.4.3

[bdist_wheel]
universal=1

[pycodestyle]
max-line-length = 120
exclude = **/.ropeproject/*

[flake8]
max-line-length = 120
exclude = **/.ropeproject/*
